--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: minimal
 dist: trusty
 group: edge
 sudo: true
+env:
+  global:
+  - PACKER_LOG=1
+  matrix:
+  - BUILDER=docker
 before_install:
 - if [[ "${BUILDER}" = "docker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
   purge -o Dpkg::Options::="--force-confnew" -yqq docker-ce ; sudo apt-get install
@@ -22,6 +27,3 @@ addons:
     - image-metadata-$(cat .packer-build-image-name).tar.bz2
     target_paths:
     - travis-ci/packer-templates/ci-opal/$BUILDER
-env:
-  matrix:
-  - BUILDER=docker
