--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,18 @@ dist: trusty
 group: edge
 sudo: true
 before_install:
+- export TRAVIS_COOKBOOKS_TEST_BRANCH="jvd-add-arch-i386"
 - if [[ "${BUILDER}" = "docker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
   purge -o Dpkg::Options::="--force-confnew" -yqq docker-ce ; sudo apt-get install
   -o Dpkg::Options::="--force-confnew" -yqq docker-ce lvm2 xfsprogs ; echo 'DOCKER_OPTS="$DOCKER_OPTS
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="master" "https://github.com/travis-ci/packer-templates.git"
+- git clone --branch="jvd-add-arch-i386" "https://github.com/travis-ci/packer-templates.git"
 - pushd packer-templates && git checkout -qf @ ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="master"
+- export PACKER_TEMPLATES_BRANCH="jvd-add-arch-i386"
 - "./packer-templates/bin/packer-build-script ci-garnet"
 addons:
   artifacts:
