--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   docker restart ; fi
 install:
 - git clone --branch="edmorley-xenial-docker" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf 608888915ac1 ; popd
+- pushd packer-templates && git checkout -qf @ ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
 - export PACKER_TEMPLATES_BRANCH="edmorley-xenial-docker"
