Add PHP 7.1 to php_versions :tada: :bomb: commit-range=7f0d43ff2d60...1fb3ec7b2c8c

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,11 +10,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --branch="edmorley-xenial-testing" "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git checkout -qf @ ; popd
+- git clone --branch="bv-add-php-7.1" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf 1fb3ec7b2c8c ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="edmorley-xenial-testing"
+- export PACKER_TEMPLATES_BRANCH="bv-add-php-7.1"
 - "./packer-templates/bin/packer-build-script ci-sardonyx"
 addons:
   artifacts:
