--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: minimal
 dist: trusty
 group: edge
 sudo: true
+env:
+  global:
+  - PACKER_LOG=1
+  matrix:
+  - BUILDER=openstack
 before_install:
 - if [[ "${BUILDER}" = "docker" ]] ; then sudo apt-get update -yqq ; sudo apt-get
   purge -o Dpkg::Options::="--force-confnew" -yqq docker-ce ; sudo apt-get install
@@ -10,12 +15,11 @@ before_install:
   --storage-driver devicemapper"' | sudo tee -a /etc/default/docker ; sudo service
   docker restart ; fi
 install:
-- git clone --depth=50 "https://github.com/travis-ci/packer-templates.git"
-- pushd packer-templates && git fetch origin +refs/pull/553/merge && git checkout
-  -qf FETCH_HEAD ; popd
+- git clone --branch="edmorley-openstack-debug" "https://github.com/travis-ci/packer-templates.git"
+- pushd packer-templates && git checkout -qf @ ; popd
 - "./packer-templates/bin/packer-build-install"
 script:
-- export PACKER_TEMPLATES_BRANCH="+refs/pull/553/merge"
+- export PACKER_TEMPLATES_BRANCH="edmorley-openstack-debug"
 - "./packer-templates/bin/packer-build-script ci-stevonnie"
 addons:
   artifacts:
@@ -23,8 +27,3 @@ addons:
     - image-metadata-$(cat .packer-build-image-name).tar.bz2
     target_paths:
     - travis-ci/packer-templates/ci-stevonnie/$BUILDER
-env:
-  matrix:
-  - BUILDER=googlecompute
-  - BUILDER=docker
-  - BUILDER=openstack
